--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -16,7 +16,7 @@
     .logo {
       a {
         text-decoration: none;
-        color: $black;
+        color: $gold;
       }
     }
 
@@ -34,7 +34,7 @@
 
           height: 3px;
           width: 100%;
-          background: $black;
+          background: $gold;
           margin-bottom: 0.3rem;
         }
       }
