--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,7 +10,7 @@ body {
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   overflow: hidden;
-  background: $gray;
+  background: $raisin;
 }
 
 * {
