--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -5,7 +5,49 @@
   width: 100vw;
   height: 100vh;
 
-  input {
-    width: 4rem;
+  .search-label {
+    display: inline-block;
+    position: relative;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 25px;
+    border: 3px solid $white;
+    transition: all 200ms ease;
+    cursor: text;
+    margin: 0px 8px 7px 0px;
+    padding: 7px 9px 0px 9px;
+
+    &:after {
+      content: "";
+      position: absolute;
+      width: 3px;
+      height: 28px;
+      right: -8px;
+      top: 30px;
+      background: $white;
+      border-radius: 3px;
+      transform: rotate(-45deg);
+      transition: all 100ms ease;
+    }
+
+    &.active,
+    &:hover {
+      width: 20rem;
+      margin-right: 0px;
+
+      &:after {
+        height: 0px;
+      }
+    }
+
+    input {
+      width: 100%;
+      border: none;
+      font-size: 1.5rem;
+      background: transparent;
+      outline: none;
+      color: $white;
+      text-align: center;
+    }
   }
 }
