--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,900&display=swap");
 @import "./variables.scss";
 @import "./pages/index.scss";
+@import "./pages/results.scss";
 @import "./components/header.scss";
 
 html,
