--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -1,12 +1,15 @@
+$delay: 0.8s;
+
 .home {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
 
   .search-label {
-    display: inline-block;
+    display: block;
     position: relative;
     width: 3rem;
     height: 3rem;
@@ -16,6 +19,7 @@
     cursor: text;
     margin: 0px 8px 7px 0px;
     padding: 7px 9px 0px 9px;
+    transition-delay: $delay;
 
     &:after {
       content: "";
@@ -28,6 +32,13 @@
       border-radius: 3px;
       transform: rotate(-45deg);
       transition: all 100ms ease;
+      transition-delay: $delay;
+    }
+
+    &.active {
+      input {
+        color: $white;
+      }
     }
 
     &.active,
@@ -46,8 +57,9 @@
       font-size: 1.5rem;
       background: transparent;
       outline: none;
-      color: $white;
+      color: transparent;
       text-align: center;
+      transition-delay: $delay;
     }
   }
 }
