--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -51,16 +51,16 @@ $delay: 0.8s;
       }
     }
 
-    input {
-      width: 100%;
-      border: none;
-      font-size: 1.5rem;
-      background: transparent;
-      outline: none;
-      color: transparent;
-      text-align: center;
-      transition-delay: $delay;
-    }
+    // input {
+    //   width: 100%;
+    //   border: none;
+    //   font-size: 1.5rem;
+    //   background: transparent;
+    //   outline: none;
+    //   color: transparent;
+    //   text-align: center;
+    //   transition-delay: $delay;
+    // }
   }
 
   button {
