no delay on input transitions

--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -59,7 +59,7 @@ $delay: 0.8s;
       outline: none;
       color: transparent;
       text-align: center;
-      transition-delay: $delay;
+      // transition-delay: $delay;
     }
   }
 
