title shadow effect

--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -22,6 +22,7 @@
         font-size: 2rem;
         text-decoration: none;
         color: $gold;
+        text-shadow: 10px 10px $gold-shadow;
       }
     }
 
