--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -43,7 +43,7 @@ $delay: 0.8s;
 
     &.active,
     &:hover {
-      width: 20rem;
+      width: 25rem;
       margin-right: 0px;
 
       &:after {
@@ -65,13 +65,37 @@ $delay: 0.8s;
 
   button {
     display: absolute;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     cursor: pointer;
+    box-shadow: 0px 0px 10px $gold;
+    background: $raisin;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 100%;
+    border: none;
     transition: all 150ms ease;
+
+    span {
+      font-family: "Sacramento", cursive;
+      font-size: 1.9rem;
+      text-align: center;
+      background: $gold;
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    &:hover {
+      box-shadow: 0px 0px 30px $gold;
+    }
 
     &:disabled {
       opacity: 0;
       cursor: auto;
+    }
+
+    &:focus {
+      outline: none;
     }
   }
 }
