--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,3 +23,16 @@ body {
 .flex {
   display: flex;
 }
+
+.loading-and-error {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $white;
+
+  p {
+    width: 80%;
+  }
+}
