temp header font

--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -19,6 +19,7 @@
 
     .logo {
       a {
+        font-family: "Sacramento", cursive;
         font-size: 2rem;
         text-decoration: none;
         color: $gold;
