add particles js background

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,6 +5,7 @@
 @import "./pages/index.scss";
 @import "./pages/results.scss";
 @import "./components/header.scss";
+@import "./components/background.scss";
 
 html,
 body {
