--- a/styles/components/background.scss
+++ b/styles/components/background.scss
@@ -2,6 +2,8 @@
   position: absolute;
   width: 100%;
   height: 100vh;
+  z-index: -1;
+  background: $raisin;
 
   #tsparticles {
     height: 100%;
