add font-weight to header logo and submit button text

--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -21,6 +21,7 @@
       a {
         font-family: "Sacramento", cursive;
         font-size: 2rem;
+        font-weight: 600;
         text-decoration: none;
         color: $gold;
         text-shadow: 10px 10px $gold-shadow;
