--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -9,6 +9,7 @@ $delay: 0.8s;
   height: 100vh;
 
   .search-label {
+    animation: float 6s ease-in-out infinite; // floating animation
     display: block;
     position: relative;
     width: 3rem;
@@ -54,6 +55,8 @@ $delay: 0.8s;
     &:hover {
       width: 25rem;
       margin-right: 0px;
+      transform: translateY(0);
+      animation-play-state: paused; // pause floating
 
       @include media("<=500px") {
         width: 20rem;
