remove ontouch effect on submit button and logo

--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -25,6 +25,11 @@
         text-decoration: none;
         color: $gold;
         text-shadow: 10px 10px $gold-shadow;
+
+        &:focus {
+          -webkit-tap-highlight-color: transparent;
+          // TODO: add effect
+        }
       }
     }
 
