new temp font for logo

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sacramento&family=Gloria+Hallelujah&display=swap");
 @import "./breakpoints.scss";
 @import "./variables.scss";
 @import "./pages/index.scss";
