--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -19,9 +19,9 @@
 
     .logo {
       a {
-        font-family: "Sacramento", cursive;
+        font-family: "Gloria Hallelujah", cursive;
         font-size: 2rem;
-        font-weight: 600;
+        font-weight: 400;
         text-decoration: none;
         color: $gold;
         text-shadow: 10px 10px $gold-shadow;
