set image opacity to 0 when submit button is disabled

--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -121,6 +121,10 @@ $delay: 0.8s;
     &:disabled {
       opacity: 0;
       cursor: default;
+
+      img {
+        opacity: 0;
+      }
     }
 
     &:focus {
