new variables for colors red and green

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -4,6 +4,8 @@ $gold: #e28413;
 $gold-shadow: #634b2e;
 $white: #ffffff;
 $gray: #f1f3f5;
+$green: #86e7b8;
+$red: #de3c4b;
 
 @keyframes float {
   0% {
