--- a/styles/pages/results.scss
+++ b/styles/pages/results.scss
@@ -1,14 +1,55 @@
 .results {
+  // TODO: styling for low-height screens
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   color: $white;
 
+  #sentiment {
+    animation: float 6s ease-in-out infinite;
+    width: 200px;
+    height: 200px;
+    border: none;
+    border-radius: 100%;
+    margin: 0 4rem 4rem 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 15px $gold;
+    background: $raisin;
+    color: $gold;
+
+    &.neutral {
+      color: $gold;
+      box-shadow: 0px 0px 15px $gold;
+    }
+
+    &.positive {
+      color: $green;
+      box-shadow: 0px 0px 15px $green;
+    }
+
+    &.negative {
+      color: $red;
+      box-shadow: 0px 0px 15px $red;
+    }
+  }
+
   p {
-    width: 80%;
+    width: 50%;
+    height: 4rem;
+    margin-top: 2rem;
     word-break: break-all;
     white-space: normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @include media("<=700px") {
+      width: 80%;
+    }
   }
 }
