add variables for green-shadow and red-shadow colors

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -5,7 +5,9 @@ $gold-shadow: #634b2e;
 $white: #ffffff;
 $gray: #f1f3f5;
 $green: #86e7b8;
+$green-shadow: #55695f;
 $red: #de3c4b;
+$red-shadow: #5f373b;
 
 @keyframes float {
   0% {
