--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,6 +24,12 @@ body {
   display: flex;
 }
 
+.container {
+  margin: 0 auto 0 auto;
+  width: 85%;
+  max-width: 1300px;
+}
+
 .loading-and-error {
   width: 100%;
   height: 100vh;
