blur effect on background

--- a/styles/components/background.scss
+++ b/styles/components/background.scss
@@ -9,6 +9,8 @@
 
   .ease-out {
     height: 100%;
+    filter: blur(2px);
+    -webkit-filter: blur(2px);
 
     #tsparticles {
       height: 100%;
