--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -15,7 +15,7 @@ $delay: 0.8s;
     width: 3rem;
     height: 3rem;
     border-radius: 25px;
-    border: 3px solid $white;
+    border: 3px solid $gold;
     transition: all 200ms ease;
     cursor: text;
     margin: 0px 8px 7px 0px;
@@ -38,7 +38,7 @@ $delay: 0.8s;
       height: 28px;
       right: -8px;
       top: 30px;
-      background: $white;
+      background: $gold;
       border-radius: 3px;
       transform: rotate(-45deg);
       transition: all 200ms ease;
