--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -6,13 +6,11 @@
   width: 100%;
   height: 10vh;
   z-index: 5;
-  padding: 3rem 6rem;
-
-  @include media("<=525px") {
-    padding: 3rem 3rem;
-  }
+  padding: 3rem 0;
 
   .flex {
+    width: 85%;
+    margin: 0 auto;
     height: 5vh;
     justify-content: space-between;
     align-items: center;
@@ -22,8 +20,8 @@
         font-size: 2rem;
         font-weight: 400;
         text-decoration: none;
-        color: $gold;
-        text-shadow: 10px 10px $gold-shadow;
+        color: $white;
+        text-shadow: 10px 10px $white-shadow;
         transition: font-size 0.2s;
 
         @include media("<=400px") {
@@ -37,24 +35,24 @@
       }
     }
 
-    .nav-toggle {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      cursor: pointer;
+    // .nav-toggle {
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    //   position: relative;
+    //   cursor: pointer;
 
-      .nav-menu {
-        width: 25px;
-        span {
-          display: block;
+    //   .nav-menu {
+    //     width: 25px;
+    //     span {
+    //       display: block;
 
-          height: 3px;
-          width: 100%;
-          background: $gold;
-          margin-bottom: 0.3rem;
-        }
-      }
-    }
+    //       height: 3px;
+    //       width: 100%;
+    //       background: $white;
+    //       margin-bottom: 0.3rem;
+    //     }
+    //   }
+    // }
   }
 }
