--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,6 +3,7 @@ $raisin: #1b1b1e;
 $gold: #e28413;
 $gold-shadow: #634b2e;
 $white: #ffffff;
+$white-shadow: #676767;
 $gray: #f1f3f5;
 $green: #86e7b8;
 $green-shadow: #55695f;
