--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,7 +13,7 @@ body {
   margin: 0;
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 * {
