--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -26,18 +26,13 @@ $red-shadow: #5f373b;
 
 @keyframes pulse {
   0% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    box-shadow: 0px 0px 15px $gold;
   }
-
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  50% {
+    box-shadow: 0px 0px 40px $gold;
   }
-
   100% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    box-shadow: 0px 0px 15px $gold;
   }
 }
 
