--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -10,6 +10,10 @@ $green-shadow: #55695f;
 $red: #de3c4b;
 $red-shadow: #5f373b;
 
+$medium-screen: "1200px";
+$small-screen: "500px";
+$short-screen: "1000px";
+
 @keyframes float {
   0% {
     transform: translateY(0);
