--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -45,3 +45,45 @@ $short-screen: "1000px";
     opacity: 0;
   }
 }
+
+@keyframes tubelight-active {
+  0%,
+  18%,
+  20%,
+  50%,
+  60%,
+  65%,
+  80%,
+  90%,
+  92% {
+    color: #fff;
+    text-shadow: 0 0 5px #fff;
+  }
+
+  18.1%,
+  20.1%,
+  50.1%,
+  60.1%,
+  65.1%,
+  80.1%,
+  90.1%,
+  92.1%,
+  100% {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #fff, 0 0 80px #fff,
+      0 0 100px #fff;
+  }
+}
+
+@keyframes tubelight-lazy {
+  0%,
+  92% {
+    color: #fff;
+    text-shadow: 0 0 10px #fff;
+  }
+
+  92.1%,
+  100% {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #fff, 0 0 80px #fff,
+      0 0 100px #fff;
+  }
+}
