--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -34,7 +34,8 @@ $short-screen-header: "750px";
         font-size: 2rem;
         font-weight: 400;
         color: $white;
-        text-shadow: 0 0 10px #fff;
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #fff,
+          0 0 $light-xxl #fff;
         transition: font-size 0.2s;
         -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
         line-height: 0.8em;
